# BookFast

./: .gitignore  01-requirements-en-storyboards.md  02-diagrammen.md  CLAUDE.md  fix_db.py  gemini.md  project-overview-boekhoudkantoren-ai.md  requirements-analysis-boekhoudkantoren-ai.md
.agents/: AGENTS.md
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
app/: container.py  db.py  main.py  models.py  seed.py
app/adapters/: extractor_stub.py  sender_console.py  storage_local.py
app/services/: audit.py  deadlines.py  dossier.py  followup.py  processing.py  reporting.py  review.py  trajecten.py
app/static/: style.css
app/templates/: _klanten_nav.html  base.html  dashboard.html  deadlines.html  deadlines_detail.html  dossier.html  dossier_list.html  klanten.html  opvolging.html  opvolging_detail.html  traject.html  trajecten_list.html  upload.html
app/web/: deps.py  routes.py  (+1 more)
backend/: pyproject.toml
backend/app/: config.py  interfaces.py  main.py  seed.py
backend/app/adapters/: drafter_template.py  runner_inline.py
backend/app/models/: __init__.py  audit.py  base.py  client.py  inbound.py  organization.py  source.py  user.py
backend/app/services/: intake.py  processing.py  review.py
backend/app/web/: routes.py
backend/boekvastai.egg-info/: SOURCES.txt  requires.txt
backend/tests/: conftest.py
boekvastai.egg-info/: PKG-INFO  SOURCES.txt
design/: BoekVastAI.dc.html
docs/: BACKLOG.md  WORKFLOW.md
tests/: conftest.py  test_confidence_routing.py  test_deadlines.py  test_tenant_scoping.py  test_trajecten.py
(+14 files in other folders)
