[project]
name = "boekvastai"
version = "0.1.0"
description = "AI-assisted workflow layer for small Belgian accounting firms — intake, review, follow-up, dossier prep"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends() in argument defaults is the framework idiom.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Embedded HTML/CSS demo fixtures exceed the line limit by design.
"app/seed.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
